feat: Add option to cache requested interest rate

--- a/InterestCalc/src/InterestCalc.Api/appsettings.json
+++ b/InterestCalc/src/InterestCalc.Api/appsettings.json
@@ -11,5 +11,6 @@
   "Urls": {
     "InterestRateQueryUrl": "http://localhost:8001/v1/interest-rate",
     "GitHubUrl": "https://github.com/lucassc/desafio-sp"
-  }
+  },
+  "CacheInterestRate": false
 }
